# synapse-core

./: CHANGELOG.md  CI_VERIFICATION.md  CODE_OF_CONDUCT.md  COMPLETION_REPORT.md  Cargo.toml  FINAL_PR_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  MERGE_STRUCTURE.md  PR_CONNECTION_DRAINING.md  PR_DESCRIPTION.md  PR_ERROR_CODES.md  PULL_REQUEST_SUMMARY.md  README.md  VALIDATION_SUMMARY.md  WEBHOOK_REPLAY_IMPLEMENTATION.md  deny.toml  docker-compose.yml  dockerfile  issues.md  merge_prs.sh  setup.sh  test_webhook.sh  verify_pr.sh
cli/synapse-cli/: CHANGELOG.md  Cargo.toml  README.md  VERSIONING.md
cli/synapse-cli/src/: client.rs  formatter.rs  lib.rs  main.rs  output.rs
cli/synapse-cli/src/commands/: admin.rs  events.rs  graphql.rs  health.rs  mod.rs  settlements.rs  stats.rs  transactions.rs  webhooks.rs
cli/synapse-cli/tests/: admin_webhooks_health_test.rs  cli.rs  events_reconnect_integration.rs  events_watch_integration.rs  events_watch_real_server_test.rs  events_watch_test.rs  export_tests.rs  graphql_integration.rs  integration_tests.rs  settlements_subprocess.rs  transactions_get_subprocess.rs
cli/synapse-cli/tests/common/: mod.rs
cli/synapse-cli/tests/support/: mod.rs
docs/: build-instructions.md  circuit-breaker.md  database-partitioning.md  duplication-audit.md  error-catalog.md  openapi.yaml  payload-validation.md  query-cache.md  sdk-cli-tutorial.md  setup.md  state-machine.md  webhook-authentication.md  webhook-replay.md  webhook_implementation.md
migrations/: 20250216000000_init.down.sql  20250217000000_partition_transactions.down.sql  20250218000000_feature_flags.down.sql  20250219000000_implement_db_partitioning.sql  20260219000000_add_assets_table.down.sql  20260220000000_settlements.down.sql  20260220000001_audit_logs.down.sql  20260220143500_transaction_dlq.down.sql  20260222000000_transaction_search_indexes.down.sql  20260222000001_transaction_memo_metadata.down.sql  20260223000000_webhook_replay_tracking.sql  20260226000000_account_monitor_cursors.sql  20260226000001_api_quotas.sql  20260325000000_webhook_endpoints.sql  (+8 more)
src/Multi-Tenant Isolation Layer (Architecture)/: .gitignore  COMPLETION_CHECKLIST.md  Cargo.toml  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  api_examples.sh  run_migrations.sh
src/Multi-Tenant Isolation Layer (Architecture)/migrations/: 001_create_tenants.sql  002_create_transactions.sql  003_seed_sample_tenants.sql
src/Multi-Tenant Isolation Layer (Architecture)/src/: config.rs  error.rs  main.rs
src/Multi-Tenant Isolation Layer (Architecture)/src/api/: handlers.rs  mod.rs
src/Multi-Tenant Isolation Layer (Architecture)/src/db/: mod.rs  models.rs  queries.rs
src/Multi-Tenant Isolation Layer (Architecture)/src/tenant/: mod.rs
src/Multi-Tenant Isolation Layer (Architecture)/tests/: tenant_isolation_test.rs
(+178 files in other folders)
