[package]
name = "synapse-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "synapse"
path = "src/main.rs"

[lib]
name = "synapse_cli"
path = "src/lib.rs"

[[bin]]
name = "mock-server"
path = "src/bin/mock-server.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "stream", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
tokio-tungstenite = "0.21"

[dev-dependencies]
assert_cmd = "2"
mockito = "1"
predicates = "3"
tempfile = "3"
wiremock = "0.5"
