[package]
name = "synapse-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "synapse"
path = "src/main.rs"

[lib]
name = "synapse_cli"
path = "src/lib.rs"

[[bin]]
name = "mock-server"
path = "src/bin/mock-server.rs"

[dependencies]
synapse-sdk = { path = "../../sdks/rust" }
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "stream", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
# Kept in lockstep with the root crate's tokio-tungstenite version — see the
# comment there for why (axum 0.6's `ws` feature vendors tokio-tungstenite 0.20).
tokio-tungstenite = "0.20"

[dev-dependencies]
assert_cmd = "2"
mockito = "1"
predicates = "3"
regex = "1"
tempfile = "3"
wiremock = "0.5"
# Real-server integration test (tests/events_watch_real_server_test.rs): boots
# the actual synapse-core axum app in-process and drives the real `synapse`
# CLI binary against its /ws endpoint.
synapse-core = { path = "../.." }
axum = "0.6"
